# chessbench

./: .gitignore  Cargo.toml  README.md  engines.toml
src/: api.rs  config.rs  domain.rs  engine.rs  main.rs  match_runner.rs  server.rs  uci.rs
ui/: index.html
ui/src/: App.css  App.tsx  api.ts  index.css  mock.ts  sse.ts
