[package]
name = "chessbench"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3"
axum = "0.7"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shakmaty = "0.27"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tower = "0.5"
